[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warlock-manager"
version = "1.9.9~20260301"
description = "Dependency library for game-server management applications."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "requests>=2.28",
    "pyyaml>=6.0",
    "typer>=0.24.1",
    "rcon>=2.4.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3",
    "responses>=0.24",
    "flake8>=7.3.0",
    "pytest",
    "pre-commit>=4.5.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["warlock_manager*"]
