[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warlock-manager"
version = "2.1.2"
description = "Dependency library for game-server management applications."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Charlie Powell", email = "cdp1337@bitsnbytes.dev" }
]
maintainers = [
    { name = "Charlie Powell", email = "cdp1337@bitsnbytes.dev" }
]
keywords = ["game-server", "management"]
dependencies = [
    "requests>=2.28",
    "pyyaml>=6.0",
    "typer>=0.24.1",
    "rcon>=2.4.9",
    "typing_extensions>=4.9.0",
    "systemdunitparser>=0.4",
    "packaging>=23.3",
    "psutil>=7.2.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "flake8>=7.3.0",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["warlock_manager*"]

[project.urls]
"Bug Tracker" = "https://github.com/BitsNBytes25/Warlock-Manager/issues"
"Homepage" = "https://warlock.nexus"
"Repository" = "https://github.com/BitsNBytes25/Warlock-Manager"
"Changelog" = "https://github.com/BitsNBytes25/Warlock-Manager/blob/main/CHANGELOG.md"

